unpackaged/main/default/objects/CustomerSatisfaction__c/CustomerSatisfaction__c.object-meta.xml
<CustomObject>
    <label>Customer Satisfaction</label>
    <nameField>
        <displayFormat>CSF-{0000}</displayFormat>
        <label>Customer Satisfaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>