unpackaged/main/default/objects/CustomerSatisfaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Satisfaction</relationshipLabel>
    <relationshipName>Customer_Satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>