unpackaged/main/default/objects/CustomerSatisfaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Satisfaction</relationshipLabel>
    <relationshipName>Customer_Satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>