unpackaged/main/default/objects/CustomerSatisfaction__c/fields/FeedbackComments__c.field-meta.xml
<CustomField>
    <fullName>FeedbackComments__c</fullName>
    <label>Feedback Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>