unpackaged/main/default/objects/CustomerSatisfaction__c/fields/RatingPick__c.field-meta.xml
<CustomField>
    <fullName>RatingPick__c</fullName>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>