unpackaged/main/default/objects/CustomerSatisfaction__c/recordTypes/Majenta_Org_2.recordType-meta.xml
<RecordType>
    <fullName>Majenta_Org_2</fullName>
    <active>true</active>
    <label>Majenta Org 2</label>
</RecordType>